# deployment_ws

./: .dockerignore  Dockerfile  README.md  ota_agent.sh
.github/workflows/: cd.yml  ci.yml
ansible/: inventory.ini  start_service.yml  stop_service.yml
prometheus/: prometheus.yml
src/deployment_pkg/: CMakeLists.txt  package.xml
src/deployment_pkg/include/deployment_pkg/: battery_utils.hpp
src/deployment_pkg/scripts/: battery_exporter.py
src/deployment_pkg/src/: battery_monitor.cpp
src/deployment_pkg/test/: test_battery_monitor.cpp  test_battery_monitor_integration.cpp  test_battery_monitor_unit.cpp
